@@ -1,3 +1,8 @@
+2014-01-07         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* command.y (next_word): Move into ifdef for HAVE_LIBREADLINE,
+	since it's only used by that code.
+
 2014-01-03         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* config.guess, config.rpath, config.sub, depcomp,
